# plot2gltf

./: .gitignore  README.md  demo.py  plot2gltf.py  pyproject.toml  requirements.frozen.txt  requirements.txt
plot2gltf/: __init__.py
